tests/snapshots/files__typecheck.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  Nil-0:
    op: Nil
    children: []
    eclass: "2"
    cost: 9223372036854776000
  TArr-6689842666879681297:
    op: TArr
    children:
      - t-id-0
      - TUnit-0
    eclass: "33"
    cost: 1
  TArr-2922503590904450013:
    op: TArr
    children:
      - TUnit-0
      - TUnit-0
    eclass: "44"
    cost: 1
  TArr-6300081435415819695:
    op: TArr
    children:
      - TUnit-0
    eclass: "16"
    cost: 1
  TArr-12899316239114981097:
    op: TArr
    children:
      - TUnit-0
      - TArr-6689842666879681297
    eclass: "37"
    cost: 1
  t-id-0:
    op: t-id
    children: []
    eclass: "44"
    cost: 9223372036854776000
  TUnit-0:
    op: TUnit
    children: []
    eclass: "13"
    cost: 9223372036854776000
  App-11307757358215063057:
    op: App
    children: []
    eclass: "6"
    cost: 1
  App-791192798209204816:
    op: App
    children:
      - Lam-3450455691695181537
    eclass: "11"
    cost: 1
  App-9479861080374888173:
    op: App
    children:
      - App-791192798209204816
      - Lam-15194017704823186443
    eclass: "12"
    cost: 1
  t-free-2-0:
    op: t-free-2
    children: []
    eclass: "37"
    cost: 9223372036854776000
  String-15673665965278112340:
    op: "\"f\""
    children: []
    eclass: String-15673665965278112340
    cost: 0
  Lam-11434045972000346481:
    op: Lam
    children:
      - String-15673665965278112340
      - TArr-2922503590904450013
      - App-11307757358215063057
    eclass: "7"
    cost: 1
  String-7848520443469635519:
    op: "\"x\""
    children: []
    eclass: String-7848520443469635519
    cost: 0
  Lam-3450455691695181537:
    op: Lam
    children:
      - String-7848520443469635519
      - TUnit-0
      - Lam-11434045972000346481
    eclass: "8"
    cost: 1
  Lam-15194017704823186443:
    op: Lam
    children:
      - String-7848520443469635519
      - TUnit-0
    eclass: "9"
    cost: 1
  Lam-5944658853747814308:
    op: Lam
    children:
      - String-7848520443469635519
      - TUnit-0
    eclass: "15"
    cost: 1
  Cons-13148821708476627649:
    op: Cons
    children:
      - String-15673665965278112340
      - t-id-0
      - Cons-10985038806294272504
    eclass: "41"
    cost: 1
  String-5052067413377037545:
    op: "\"y\""
    children: []
    eclass: String-5052067413377037545
    cost: 0
  Cons-11241755982477309596:
    op: Cons
    children:
      - String-5052067413377037545
      - TUnit-0
      - Nil-0
    eclass: "17"
    cost: 1
  Cons-10985038806294272504:
    op: Cons
    children:
      - String-7848520443469635519
      - TUnit-0
      - Nil-0
    eclass: "22"
    cost: 1
  Cons-7607460961782902822:
    op: Cons
    children:
      - String-7848520443469635519
      - TUnit-0
      - Cons-9459903128086214959
    eclass: "25"
    cost: 1
  Cons-8438862015800447079:
    op: Cons
    children:
      - String-7848520443469635519
      - TUnit-0
      - Cons-11241755982477309596
    eclass: "28"
    cost: 1
  Cons-9459903128086214959:
    op: Cons
    children:
      - String-5052067413377037545
      - TArr-6689842666879681297
      - Nil-0
    eclass: "20"
    cost: 1
  app-unit-id-0:
    op: app-unit-id
    children: []
    eclass: "12"
    cost: 9223372036854776000
  free-0:
    op: free
    children: []
    eclass: "15"
    cost: 9223372036854776000
root_eclasses: []
class_data:
  "2":
    type: Ctx
  "33":
    type: Type
  "44":
    type: Type
  "13":
    type: Type
  "16":
    type: Type
  "23":
    type: Type
  "37":
    type: Type
  "6":
    type: Expr
  "4":
    type: Expr
  "5":
    type: Expr
  "11":
    type: Expr
  "8":
    type: Expr
  "1":
    type: Expr
  "12":
    type: Expr
  "9":
    type: Expr
  "7":
    type: Expr
  String-15673665965278112340:
    type: String
  String-7848520443469635519:
    type: String
  "15":
    type: Expr
  "14":
    type: Expr
  "41":
    type: Ctx
  "22":
    type: Ctx
  "17":
    type: Ctx
  String-5052067413377037545:
    type: String
  "25":
    type: Ctx
  "20":
    type: Ctx
  "28":
    type: Ctx

