tests/snapshots/files__typeinfer.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  TInt-0:
    op: TInt
    children: []
    eclass: "0"
    cost: 1
  TBool-0:
    op: TBool
    children: []
    eclass: "1"
    cost: 1
  TUnit-0:
    op: TUnit
    children: []
    eclass: "2"
    cost: 1
  Unit-0:
    op: ()
    children: []
    eclass: Unit-0
    cost: 0
  base-types-0:
    op: base-types
    children:
      - TInt-0
    eclass: Unit-0
    cost: 1
  base-types-5871781006564002453:
    op: base-types
    children:
      - TBool-0
    eclass: Unit-0
    cost: 1
  base-types-11743562013128004906:
    op: base-types
    children:
      - TUnit-0
    eclass: Unit-0
    cost: 1
root_eclasses: []
class_data:
  "0":
    type: Type
  "1":
    type: Type
  "2":
    type: Type
  Unit-0:
    type: Unit

