tests/snapshots/files__typeinfer_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
Abs: 0
App: 0
Cons: 0
False: 0
Forall: 0
Fresh: 0
Let: 0
MyUnit: 0
Nil: 0
Num: 0
TArr: 0
TBool: 1
TInt: 1
TUnit: 1
TVar: 0
True: 0
V: 0
Var: 0
base-types: 3
errors: 0
expr-size: 0
ftv: 0
ftvCtx: 0
ftvScheme: 0
generalize: 0
has-qs: 0
has-qs-demand: 0
instantiate: 0
lookup: 0
occurs-check: 0
subst-fresh: 0
typeof: 0
