tests/snapshots/files__unification_points_to_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
(
   (AllocVar (Expr "u"))
   (AllocVar (Expr "v"))
   (expr-points-to (Expr "xp"))
   (expr-points-to (Expr "&(r->x)"))
   (expr-points-to (Expr "yp"))
   (expr-points-to (Expr "&(r->y)"))
   (expr-points-to (Expr "u"))
   (expr-points-to (Expr "v"))
   (expr-points-to (Expr "(struct s){u, v}"))
   (expr-points-to (Expr "zpp"))
   (expr-points-to (Expr "&(sp->x)"))
   (ptr-points-to (AllocVar (Expr "sp")))
)
(
   (AllocVar (Expr "sp"))
   (expr-points-to (Expr "r"))
   (expr-points-to (Expr "sp"))
)
Alloc: 0
Alloc: 0
AllocVar: 3
AllocVar: 3
Expr: 22
Expr: 22
Field: 2
Field: 2
Func: 2
Func: 2
Stmt: 19
Stmt: 19
Type: 7
Type: 7
add: 0
add: 0
addr: 3
addr: 3
assign: 9
assign: 9
call: 1
call: 1
eq: 0
eq: 0
expr: 1
expr: 1
expr-points-to: 11
expr-points-to: 11
field: 0
field: 0
field-assign: 0
field-assign: 0
func: 2
func: 2
func-stmt: 16
func-stmt: 16
load: 4
load: 4
malloc: 2
malloc: 2
ptr-points-to: 1
ptr-points-to: 1
return: 1
return: 1
store: 5
store: 5
struct-lit-field: 2
struct-lit-field: 2
