tests/snapshots/files__unification_points_to_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
(
   (@AllocVarView (Expr "u") (AllocVar (Expr "u")))
)
(
   (@AllocVarView (Expr "sp") (AllocVar (Expr "sp")))
)
